<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/dateText"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/weatherText"
        app:layout_constraintEnd_toEndOf="@+id/pathText"
        app:layout_constraintStart_toStartOf="@+id/pathText"
        app:layout_constraintTop_toBottomOf="@+id/pathText" />

    <TextView
        android:id="@+id/pathText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="@+id/surveyorText"
        app:layout_constraintEnd_toStartOf="@+id/pathNameEditText"
        app:layout_constraintStart_toStartOf="@+id/surveyorText"
        app:layout_constraintTop_toBottomOf="@+id/surveyorText" />

    <TextView
        android:id="@+id/surveyorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/user_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/pathText"
        app:layout_constraintEnd_toStartOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/surveyorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/surveyorText"
        app:layout_constraintTop_toTopOf="@+id/surveyorText" />

    <EditText
        android:id="@+id/pathNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/pathText"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintTop_toTopOf="@+id/pathText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/dateTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_default_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="@+id/pathNameEditText"
        app:layout_constraintStart_toStartOf="@+id/pathNameEditText"
        app:layout_constraintTop_toTopOf="@+id/dateText" />

    <Spinner
        android:id="@+id/weatherSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/weather_strings"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/weatherText"
        app:layout_constraintEnd_toEndOf="@+id/dateTextbox"
        app:layout_constraintStart_toStartOf="@+id/dateTextbox"
        app:layout_constraintTop_toTopOf="@+id/weatherText" />
</androidx.constraintlayout.widget.ConstraintLayout>